Heaviest pokemons limit 50